fix: force table cell content to wrap

--- a/src/components/map/styles/Popup.css
+++ b/src/components/map/styles/Popup.css
@@ -7,10 +7,6 @@
     min-width: 150px;
 }
 
-.dhis2-map-popup-event {
-    overflow-x: auto;
-}
-
-.dhis2-map-popup-event th {
-    text-align: left;
+.maplibregl-popup-close-button:focus {
+    outline: none;
 }
